valley_framework = files(
    'src/core/Controller.vala',
    'src/core/Model.vala',
    'src/core/View.vala',
    'src/exceptions/ApplicationException.vala',
    'src/exceptions/ArgumentException.vala',
    'src/exceptions/ArgumentNullException.vala',
    'src/exceptions/DirectoryNotFoundException.vala',
    'src/exceptions/FileNotFoundException.vala',
    'src/exceptions/IOException.vala',
    'src/exceptions/IndexOutOfRangeException.vala',
    'src/exceptions/NullReferenceException.vala',
    'src/exceptions/SystemException.vala',
    'src/utils/BoolUtil.vala',
    'src/utils/CharUtil.vala',
    'src/utils/CoreUtil.vala',
    'src/utils/DoubleUtil.vala',
    'src/utils/EnumUtil.vala',
    'src/utils/FileUtil.vala',
    'src/utils/IntUtil.vala',
    'src/utils/LongUtil.vala',
    'src/utils/ObjectUtil.vala',
    'src/utils/ShortUtil.vala',
    'src/utils/StringUtil.vala',
    'src/utils/TimeUtil.vala',
    'src/utils/URLUtil.vala'
)